--- a/src/index.html
+++ b/src/index.html
@@ -2993,7 +2993,6 @@ Custom property | Description | Default
       padding-left: 1em;
       padding-right: 1em;
       align-items: center;
-      cursor: pointer;
       font-size: 1.3em;
     }
 
@@ -3003,6 +3002,7 @@ Custom property | Description | Default
       overflow: hidden;
       text-overflow: ellipsis;
       padding: 4px;
+      cursor: pointer;
     }
     span.title.style-scope.testrtc-suite:hover {
       background-color: rgba(0,0,0,0.1);
@@ -3074,6 +3074,9 @@ Custom property | Description | Default
       font-size: 0.75em;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+    .header.testrtc-test:hover {
+      background-color: rgba(0,0,0,0.1);
     }
 
     :host[state='success'] iron-icon {
