nettest udp optional

--- a/src/index.html
+++ b/src/index.html
@@ -2066,7 +2066,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding-left: 1em;
       padding-right: 1em;
       align-items: center;
-      cursor: pointer;
       font-size: 1.3em;
     }
 
@@ -2076,6 +2075,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       overflow: hidden;
       text-overflow: ellipsis;
       padding: 4px;
+      cursor: pointer;
     }
     span.title.style-scope.testrtc-suite:hover {
       background-color: rgba(0,0,0,0.1);
@@ -2147,6 +2147,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       font-size: 0.75em;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+    .header.testrtc-test:hover {
+      background-color: rgba(0,0,0,0.1);
     }
 
     :host[state='success'] iron-icon {
