--- a/src/index.html
+++ b/src/index.html
@@ -4139,10 +4139,20 @@ Custom property | Description | Default
       margin: 1em auto 1em auto;
     }
 
+    #reportButton > iron-icon {
+        margin: 4px;
+    }
+    #reportButton:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+
     #startButton {
-      line-height: 3em;
-      background-color: #9E9;
-      color: #000;
+        line-height: 3em;
+        background-color: #9E9;
+        color: #000;
+    }
+    #startButton:hover {
+        background-color: #8c8;
     }
 
     .section {
@@ -4161,10 +4171,9 @@ Custom property | Description | Default
 
     <!-- Title toolbar -->
     <paper-toolbar class="titlebar">
-      <span class="title">WebRTC Test</span>
-      <paper-icon-button icon="menu" on-tap="openSettingsDialog"></paper-icon-button>
-      <paper-icon-button icon="bug-report" on-tap="openBugReport"></paper-icon-button>
-      <paper-button id="startButton" on-tap="run" raised="" disabled="">Start</paper-button>
+        <span class="title">WebRTC Test</span>
+        <paper-button id="reportButton" on-tap="openBugReport">Report<iron-icon icon="cloud-download"></iron-icon></paper-button>
+        <paper-button id="startButton" on-tap="run" raised="" disabled="">Start all</paper-button>
     </paper-toolbar>
 
     <div style="display:none">
