--- a/src/index.html
+++ b/src/index.html
@@ -2808,8 +2808,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <h3>Note</h3>
       <p>The report will contain information about your device including network information 
         that is useful to troubleshoot the issue.</p>
-        <p>You may want to share it with someone investigating your issue at 
-            <a href="//www.livebridge.eu/#kontakt">Team LiveBridge</a>.</p>
+        <p>You may want to share it with someone investigating your issue by 
+            <a href="mailto:hello@livebridge.eu">Email to Team LiveBridge</a>.</p>
       <div class="buttons">
         <paper-button on-tap="download" disabled$="{{submitting}}">Download report</paper-button>
         <paper-button dialog-dismiss="" disabled$="{{submitting}}">Cancel</paper-button>
