--- a/src/index.html
+++ b/src/index.html
@@ -4116,8 +4116,8 @@ Custom property | Description | Default
       <h3>Note</h3>
       <p>The report will contain information about your device including network information 
         that is useful to troubleshoot the issue.</p>
-        <p>You may want to share it with someone investigating your issue at 
-            <a href="//www.livebridge.eu/#kontakt">Team LiveBridge</a>.</p>
+        <p>You may want to share it with someone investigating your issue by 
+            <a href="mailto:hello@livebridge.eu?subject=TestRTC Report&amp;Body=Dear Team LiveBridge,%0A%0AI will attach my WebRTC Report to this email.%0A%0AKind Regards">Email to Team LiveBridge</a>.</p>
       <div class="buttons">
         <paper-button on-tap="download" disabled$="{{submitting}}">Download report</paper-button>
         <paper-button dialog-dismiss="" disabled$="{{submitting}}">Cancel</paper-button>
