--- a/src/index.html
+++ b/src/index.html
@@ -4144,9 +4144,12 @@ Custom property | Description | Default
       max-width: 40em;
       margin: 1em auto 1em auto;
     }
+    .paper-toolbar-0 .toolbar-tools.paper-toolbar > .title {
+      margin: 0;
+    }
 
     #reportButton > iron-icon {
-        margin: 4px;
+      margin: 4px;
     }
     #reportButton:hover {
         background-color: rgba(0, 0, 0, 0.1);
@@ -4179,7 +4182,7 @@ Custom property | Description | Default
     <paper-toolbar class="titlebar">
         <span class="title">WebRTC Test</span>
         <paper-button id="reportButton" on-tap="openBugReport">Report<iron-icon icon="cloud-download"></iron-icon></paper-button>
-        <paper-button id="startButton" on-tap="run" raised="" disabled="">Start all</paper-button>
+        <paper-button id="startButton" on-tap="run" raised="" disabled="">Start</paper-button>
     </paper-toolbar>
 
     <div style="display:none">
