Style for small displays

--- a/src/index.html
+++ b/src/index.html
@@ -4144,9 +4144,9 @@ Custom property | Description | Default
       max-width: 40em;
       margin: 1em auto 1em auto;
     }
-    .paper-toolbar-0 .toolbar-tools.paper-toolbar > .title {
-      margin: 0;
-    }
+      .titlebar .title {
+          margin-left: 0;
+      }
 
     #reportButton > iron-icon {
       margin: 4px;
