--- a/src/index.html
+++ b/src/index.html
@@ -2836,9 +2836,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       max-width: 40em;
       margin: 1em auto 1em auto;
     }
-    .paper-toolbar-0 .toolbar-tools.paper-toolbar > .title {
-      margin: 0;
-    }
+      .titlebar .title {
+          margin-left: 0;
+      }
 
     #reportButton > iron-icon {
       margin: 4px;
