--- a/src/index.html
+++ b/src/index.html
@@ -2836,21 +2836,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       max-width: 40em;
       margin: 1em auto 1em auto;
     }
-      .titlebar .title {
-          margin-left: 0;
-      }
-
+    .titlebar .title {
+      margin-left: 0;
+    }
+    #reportButton {
+      margin: 0;
+    }
     #reportButton > iron-icon {
       margin: 4px;
     }
     #reportButton:hover {
         background-color: rgba(0, 0, 0, 0.1);
     }
-
     #startButton {
         line-height: 3em;
         background-color: #9E9;
         color: #000;
+        margin: 0;
     }
     #startButton:hover {
         background-color: #8c8;
