--- a/src/index.html
+++ b/src/index.html
@@ -4126,7 +4126,7 @@ Custom property | Description | Default
             <a href="mailto:hello@livebridge.eu?subject=TestRTC Report&amp;Body=Dear Team LiveBridge,%0A%0A{{description}}%0A%0AI will attach my WebRTC Test Report to this email.%0A%0AKind Regards">Email to Team LiveBridge</a>.</p>
       <div class="buttons">
         <paper-button on-tap="download" disabled$="{{submitting}}">Download report</paper-button>
-        <paper-button dialog-dismiss="" disabled$="{{submitting}}">Cancel</paper-button>
+        <paper-button dialog-dismiss="" disabled$="{{submitting}}">Close</paper-button>
       </div>
     </paper-dialog>
 
