--- a/src/index.html
+++ b/src/index.html
@@ -3014,6 +3014,8 @@ Custom property | Description | Default
     }
     .header .status {
       flex: 30px;
+      display: inline-flex;
+      justify-content: flex-end;
     }
     .header .select {
       font-weight: 300;
