--- a/src/index.html
+++ b/src/index.html
@@ -2087,6 +2087,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     .header .status {
       flex: 30px;
+      display: inline-flex;
+      justify-content: flex-end;
     }
     .header .select {
       font-weight: 300;
